--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -83,16 +83,19 @@ special-player-type-priority = {
 light = {}
 dark = {}
 accessible = {}
+custom = {}
 
 themes = {}
 themes.light = light
 themes.dark = dark
 themes.accessible = accessible
+themes.custom = custom
 
 
 light.clear = transparent
 dark.clear = transparent
 accessible.clear = transparent
+custom.clear = transparent
 
 
 /*************/
@@ -500,7 +503,136 @@ accessible.player-black-paused-clock          = #928A99;
 
 accessible.joseki-ideal                       = #DBAF00;
 
+/**************/
+/*** CUSTOM ***/
+/**************/
+core-color-darken-amount = 20%
 
+custom.bg                                 = #1a1a1a
+custom.fg                                 = #bbbbbb
+custom.fg-increased-contrast              = #ffffff
+custom.mix-base                           = #777
+custom.background-color                   = custom.bg
+custom.card-background-color              = lighten(custom.bg, 7%)
+custom.text-color                         = custom.fg
+custom.spectator-text-color               = #8987FC
+custom.text-color-active                  = lighten(custom.text-color, 50%)
+custom.toast-bg                           = custom.fg
+custom.toast-fg                           = custom.bg
+custom.link-color                         = #539bff
+custom.link-color-active                  = darken(custom.link-color, 20%)
+
+custom.default-button                     = lighten(custom.bg, 10%)
+custom.default-button-color               = custom.fg
+custom.primary                            = darken(light.primary, core-color-darken-amount)
+custom.danger                             = darken(light.danger, core-color-darken-amount)
+custom.success                            = darken(light.success, core-color-darken-amount)
+custom.info                               = darken(light.info, core-color-darken-amount)
+custom.reject                             = darken(light.reject, core-color-darken-amount + 10%)
+custom.colored-background-fg              = #eeeeee
+custom.malkovich-bg                       = #597053
+custom.variation                          = #00aaff
+custom.variation-hover                    = #1A93D0
+custom.email-banner                       = #2A492B
+custom.chart-area                         = #092D3E
+custom.chart-line                         = #329BE0
+custom.error-boundary-bg                  = darken(light.reject, 50%)
+custom.error-boundary-fg                  = lighten(light.reject, 50%)
+
+custom.indicate-online                    = #6f6
+custom.indicate-online-shadow             = -1px -1px 0 #fff,  1px -1px 0 #8c8, -1px 1px 0 #8c8, 1px 1px 0 #6a6;
+custom.chat-offline                       = #ccc
+custom.chat-offline-shadow                = -1px -1px 0 #ccc,  1px -1px 0 #ccc, -1px 1px 0 #ccc, 1px 1px 0 #ccc;
+
+custom.user                               = #9dc6ff
+custom.supporter                          = supporter-gold;
+custom.aga-official                       = light.aga-official;
+custom.professional                       = green;
+custom.bot                                = light.bot
+custom.moderator                          = lighten(light.moderator, 20%)
+custom.admin                              = lighten(light.admin, 20%)
+custom.ambassador                         = light.ambassador
+custom.teacher                            = light.teacher
+
+custom.shade0                             = lighten(custom.bg, 70%)
+custom.shade1                             = lighten(custom.bg, 50%)
+custom.shade2                             = lighten(custom.bg, 35%)
+custom.shade3                             = lighten(custom.bg, 25%)
+custom.shade4                             = lighten(custom.bg, 20%)
+custom.shade5                             = lighten(custom.bg, 13%)
+
+custom.search-highlight                  = #554E00
+
+custom.chat-mentions                      = #E36497 // pink
+custom.chat-self-message                  = #8AB1E6
+custom.chat-system                        = lighten(light.chat-system, 20%)
+custom.private-chat-user                  = #eeeeee
+
+
+custom.win                                = desaturate(darken(light.win, 30%), 20%)
+custom.loss                               = desaturate(darken(light.loss, 30%), 20%)
+
+custom.strong-win                         = lighten(custom.win, 25%)
+custom.strong-loss                        = lighten(custom.loss, 25%)
+
+custom.weak-win                           = darken(custom.win, 25%)
+custom.weak-loss                          = darken(custom.loss, 25%)
+
+custom.strong-w-text                      = custom.bg
+custom.strong-l-text                      = custom.bg
+custom.weak-w-text                        = custom.fg
+custom.weak-l-text                        = custom.fg
+
+custom.winner-trophy                     = #e6b500
+custom.annul-opacity                    = 0.3
+
+/** React Select colors **/
+
+custom.react-select-bg                   = custom.shade4
+custom.react-select-border               = custom.shade5
+custom.react-select-selected-bg          = #2684FF
+custom.react-select-selected-fg          = #FFFFFF
+custom.react-select-focused-bg           = #435B80
+custom.react-select-focused-fg           = #ffffff
+
+/** Navbar **/
+
+custom.navbar-highlight-background-color  = #333
+custom.navbar-background-color            = lighten(custom.bg, 5%)
+custom.logo-svg                           = svg-load("../assets/ogs_dark.svg")
+
+
+/** Input **/
+
+custom.input-bg                           = lighten(custom.bg, 30%)
+custom.input-border                       = lighten(custom.bg, 30%)
+custom.input-fg                           = custom.fg
+
+
+/** MiniBoards **/
+
+custom.goban-shadow                       = none
+custom.goban-shadow-borderless            = none
+custom.miniboard-to-move                  = #2B4029
+custom.miniboard-to-move-border           = darken(custom.miniboard-to-move, 60%)
+custom.miniboard-hover                    = #578588
+custom.miniboard-hover-border             = darken(custom.miniboard-hover, 30%)
+custom.miniboard-stone-removal            = #5B4810
+custom.miniboard-stone-removal-border     = darken(custom.miniboard-stone-removal, 45%)
+custom.miniboard-stone-removal-hover      = darken(custom.miniboard-stone-removal, 45%)
+custom.miniboard-stone-removal-hover-border= darken(custom.miniboard-stone-removal-hover, 45%)
+custom.player-black-background            = linear-gradient(to bottom, #7d7d7d 0%, #333333 50%, #0c0c0c 100%);
+custom.player-white-background            = linear-gradient(to bottom, #888888 0%, #efefef 50%, #efefef 100%);
+custom.inactive-support-gradient          = linear-gradient(to bottom, #7d7d7d 0%, #333333 100%);
+custom.active-support-gradient            = linear-gradient(to bottom, darken(supporter-gold, 30%) 0%, darken(supporter-gold, 60%) 100%);
+custom.player-black-fg                    = custom.fg
+custom.player-white-fg                    = darken(custom.fg, 90%)
+custom.player-black-clock                 = lighten(custom.player-black-fg, 50%)
+custom.player-white-clock                 = #000
+custom.player-white-paused-clock          = #5F4A71;
+custom.player-black-paused-clock          = #928A99;
+
+custom.joseki-ideal                       = #DBAF00;
 
 /************/
 /************/
