--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -512,7 +512,7 @@ custom.bg                                 = #1a1a1a
 custom.fg                                 = #bbbbbb
 custom.fg-increased-contrast              = #ffffff
 custom.mix-base                           = #777
-custom.background-color                   = custom.bg
+custom.background-color                   = transparent
 custom.card-background-color              = lighten(custom.bg, 7%)
 custom.text-color                         = custom.fg
 custom.spectator-text-color               = #8987FC
