--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -26,8 +26,19 @@
     display: block;
 }
 
+* {
+  box-sizing border-box;
+}
+
+body {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
 html, body, #main-content {
     height: 100%;
+    overflow: auto;
     font-size: font-size-normal;
     -webkit-backface-visibility:  hidden;
     -webkit-tap-highlight-color:  transparent;
@@ -36,8 +47,11 @@ html, body, #main-content, #main-content > div {
     margin: 0;
     padding: 0;
     min-height: 100%;
-    themed background-color background-color;
     themed color text-color;
+}
+
+#main-content {
+    themed background-color background-color;
 }
 
 .monospace {
@@ -115,12 +129,12 @@ a.primary:active, a.primary:hover, .primary.clickable:hover, .primary.fakelink:h
     }
 }
 .page-width {
+    themed background-color container-background-color;
     align-self: center;
     align-content: left;
     width: 100%;
-    max-width: 1110px;
-    padding-top: 0.7rem;
-    padding-bottom: 0.7rem;
+    max-width: 1140px;
+    padding: 0.7rem;
 }
 
 .page-nav{
