Added responsive margin and min-height to .page-width; removed margin-bottom from NavBar

--- a/src/global_styl/bootstrap-esq.styl
+++ b/src/global_styl/bootstrap-esq.styl
@@ -100,4 +100,8 @@ fieldset {
     }
 }
 
-
+/* Responsive tags */
+@media only screen and (min-width: grid-breaks[lg] - 1)
+    .page-width
+        margin-top: 1rem;
+        min-height: auto;
