--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -134,6 +134,7 @@ a.primary:active, a.primary:hover, .primary.clickable:hover, .primary.fakelink:h
     align-content: left;
     width: 100%;
     max-width: 1140px;
+    min-height: "calc(100vh - %navbar-height)";
     padding: 0.7rem;
 }
 
