ChatView: changed location and added background-color for the custom theme

--- a/src/global_styl/bootstrap-esq.styl
+++ b/src/global_styl/bootstrap-esq.styl
@@ -19,11 +19,9 @@
 
 .container {
     width: 100%;
-    max-width: 1339px;
-    margin-right: auto;
-    margin-left: auto;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 0 0.5rem;
     box-sizing: border-box;
 }
 
@@ -103,5 +101,5 @@ fieldset {
 /* Responsive tags */
 @media only screen and (min-width: grid-breaks[lg] - 1)
     .page-width
-        margin-top: 1rem;
+        margin-top: 1 rem;
         min-height: auto;
