--- a/src/views/ChatView/ChatView.styl
+++ b/src/views/ChatView/ChatView.styl
@@ -20,8 +20,9 @@ channel-utils-height=8.4rem;
 channel-width=12rem;
 
 .ChatView {
+    themed background-color container-background-color;
     position: fixed;
-    top: navbar-height+0.2rem;
+    top: navbar-height;
     bottom: 0;
     left: 0;
     right: 0;
