Background color fix: PlayerAutoComplete and selects are no longer dependent on background-color

--- a/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
+++ b/src/components/PlayerAutocomplete/PlayerAutocomplete.styl
@@ -21,7 +21,7 @@
     // here
 
     .react-autosuggest__suggestions-container {
-        themed background-color background-color;
+        themed background-color bg;
         themed color text-color;
         text-align: left;
     }
