--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -302,7 +302,7 @@ input.search{
 }
 
 select {
-    themed background-color background-color;
+    themed background-color bg;
     themed color text-color;
 }
 
