--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -54,6 +54,10 @@ html, body, #main-content, #main-content > div {
     themed background-color background-color;
 }
 
+.custom-theme-bg {
+    themed background-color container-background-color;
+}
+
 .monospace {
     font-family: 'Source Code Pro', monospace;
 }
