--- a/src/global_styl/global.styl
+++ b/src/global_styl/global.styl
@@ -54,10 +54,31 @@ html, body, #main-content, #main-content > div {
     themed background-color background-color;
 }
 
+/* CUSTOM THEME STYLES */
 .custom-theme-bg {
     themed background-color container-background-color;
 }
 
+.custom-theme-box-shadow {
+   themed box-shadow container-box-shadow;
+}
+
+.custom-theme-border {
+    themed border container-border;
+}
+
+.custom-theme-border-color {
+    themed border-color container-border-color;
+}
+
+.custom-theme-styles-all {
+    themed background-color container-background-color;
+    themed box-shadow container-box-shadow;
+    themed border container-border;
+    themed border-color container-border-color;
+}
+
+/* CUSTOM THEME STYLES  - END*/
 .monospace {
     font-family: 'Source Code Pro', monospace;
 }
@@ -134,6 +155,10 @@ a.primary:active, a.primary:hover, .primary.clickable:hover, .primary.fakelink:h
 }
 .page-width {
     themed background-color container-background-color;
+    themed border container-border;
+    themed border-color container-border-color;
+    themed box-shadow container-box-shadow;
+
     align-self: center;
     align-content: left;
     width: 100%;
