Added custom theme background and shadow to MiniGoban

--- a/src/components/MiniGoban/MiniGoban.styl
+++ b/src/components/MiniGoban/MiniGoban.styl
@@ -31,6 +31,11 @@
 
     &.link {
         cursor: pointer;
+
+        .inner-container {
+            themed background-color container-background-color;
+            themed box-shadow container-box-shadow;
+        }
     }
 
     .inner-container {
