Added custom theme to ObserveGames

--- a/src/components/ObserveGamesComponent/ObserveGamesComponent.styl
+++ b/src/components/ObserveGamesComponent/ObserveGamesComponent.styl
@@ -32,6 +32,14 @@
         flex-wrap: wrap;
     }
 
+    .header > div {
+        margin: 0.25rem 0;
+    }
+
+    .header > buttom {
+        margin: auto 0;
+    }
+
 
     @media only screen and (max-width: 340px) {
         .header button {
@@ -46,7 +54,7 @@
     }
 
     .container {
-        margin-bottom: 1rem;
+        margin-bottom: 0.7rem;
     }
 
 
