--- a/src/views/ObserveGames/ObserveGames.styl
+++ b/src/views/ObserveGames/ObserveGames.styl
@@ -19,3 +19,7 @@
 .ObserveGames {
     text-align: center;
 }
+
+@media only screen and (min-width: grid-breaks[lg] - 1)
+    .ObserveGames
+        margin-top: 0.7 rem;
