--- a/src/components/GobanLineSummary/GobanLineSummary.styl
+++ b/src/components/GobanLineSummary/GobanLineSummary.styl
@@ -17,6 +17,12 @@
 
 .GobanLineSummaryContainer {
     //display: table
+
+    themed background-color container-background-color;
+    themed box-shadow container-box-shadow;
+    themed border container-border;
+    themed border-color container-border-color;
+    
     width: auto;
     max-width: max-content;
     overflow-x: auto;
@@ -25,6 +31,7 @@
 }
 
 .GobanLineSummary {
+
     themed color fg;
     &:hover {
         text-decoration: none;
