--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -530,7 +530,7 @@ custom.bg                                 = #1a1a1a
 custom.fg                                 = #bbbbbb
 custom.fg-increased-contrast              = #ffffff
 custom.mix-base                           = #777
-custom.background-color                   = alpha(black, 30%) 
+custom.background-color                   = alpha(black, 15%) 
 custom.card-background-color              = lighten(custom.bg, 7%)
 custom.text-color                         = custom.fg
 custom.spectator-text-color               = #8987FC
@@ -541,7 +541,7 @@ custom.link-color                         = #539bff
 custom.link-color-active                  = darken(custom.link-color, 20%)
 
 // Unique values for custom background
-custom.container-background-color         = alpha(custom.bg, 80%)
+custom.container-background-color         = alpha(custom.bg, 85%)
 custom.container-border                   = 1px solid transparent
 custom.container-border-color             = lighten(custom.container-background-color, 10%)
 custom.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
@@ -612,8 +612,8 @@ custom.annul-opacity                    = 0.3
 
 /** React Select colors **/
 
-custom.react-select-bg                   = custom.shade4
-custom.react-select-border               = custom.shade5
+custom.react-select-bg                   = lighten(custom.bg, 20%)
+custom.react-select-border               = lighten(custom.bg, 13%)
 custom.react-select-selected-bg          = #2684FF
 custom.react-select-selected-fg          = #FFFFFF
 custom.react-select-focused-bg           = #435B80
