--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -19,16 +19,23 @@
 
 puzzle-controls-width=400px
 
+body.custom .Puzzle .right-col hr {
+    border: 0;
+}
+
 .Puzzle {
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    position: absolute;
-    top: below-navbar;
-    bottom: 0;
-    left: 0;
-    right: 0;
 
+    &.wide {
+        min-height: "calc(100vh - %s)" % navbar-height;
+    }
+
+    &.wide .right-col {
+            max-height: "calc(100vh - %s)" % navbar-height;
+            overflow-y: auto;
+    }
 
     &.portrait {
         flex-direction: column;
@@ -67,7 +74,7 @@ puzzle-controls-width=400px
         overflow-y: visible;
         overflow-x: visible;
         align-self: center;
-        min-height: 100vh;
+        // min-height: 100vh;
     }
 
     .btn-container {
@@ -91,6 +98,8 @@ puzzle-controls-width=400px
 
 
     .horizontal {
+        margin: 0.5rem auto;
+        padding: 0.5rem auto;
         overflow-x: hidden;
         dt, dd {
             width: 45%;
@@ -107,7 +116,8 @@ puzzle-controls-width=400px
 
     .puzzle-node-content {
         border: 1px solid transparent;
-        themed border-color shade4
+        themed border-color shade4;
+        themed background-color container-background-color;
         margin-top: 1rem;
 
         .actions {
