Made Cards translucent

--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -105,7 +105,11 @@ light.fg                                = #202020
 light.fg-increased-contrast             = #000000
 light.mix-base                          = #999
 light.background-color                  = alpha(#fff, 15%)
-light.card-background-color             = lighten(light.bg, 20%)
+light.container-background-color         = alpha(light.bg, 80%)
+light.container-border                   = 1px solid transparent
+light.container-border-color             = lighten(light.container-background-color, 10%)
+light.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
+light.card-background-color             = lighten(light.container-background-color, 20%)
 light.text-color                        = light.fg
 light.text-color-active                 = darken(light.text-color, 50%)
 light.spectator-text-color              = #0A06A8
@@ -114,11 +118,6 @@ light.toast-bg                          = light.fg
 light.toast-fg                          = light.bg
 light.link-color                        = #0068F7
 light.link-color-active                 = darken(light.link-color, 20%)
-
-light.container-background-color         = alpha(light.bg, 80%)
-light.container-border                   = 1px solid transparent
-light.container-border-color             = lighten(light.container-background-color, 10%)
-light.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
 
 light.default-button                    = #E6E6E0
 light.primary                           = #2480FF
@@ -249,8 +248,12 @@ dark.bg                                 = #1a1a1a
 dark.fg                                 = #bbbbbb
 dark.fg-increased-contrast              = #ffffff
 dark.mix-base                           = #777
-dark.background-color                   = alpha(black, 15%) 
-dark.card-background-color              = lighten(dark.bg, 7%)
+dark.background-color                   = alpha(black, 15%)
+dark.container-background-color         = alpha(dark.bg, 80%)
+dark.container-border                   = 1px solid transparent
+dark.container-border-color             = lighten(dark.container-background-color, 10%)
+dark.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
+dark.card-background-color              = lighten(dark.container-background-color, 7%)
 dark.text-color                         = dark.fg
 dark.spectator-text-color               = #8987FC
 dark.text-color-active                  = lighten(dark.text-color, 50%)
@@ -258,11 +261,6 @@ dark.toast-bg                           = dark.fg
 dark.toast-fg                           = dark.bg
 dark.link-color                         = #539bff
 dark.link-color-active                  = darken(dark.link-color, 20%)
-
-dark.container-background-color         = alpha(dark.bg, 80%)
-dark.container-border                   = 1px solid transparent
-dark.container-border-color             = lighten(dark.container-background-color, 10%)
-dark.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
 
 dark.default-button                     = lighten(dark.bg, 10%)
 dark.default-button-color               = dark.fg
