--- a/src/components/Modal/Modal.styl
+++ b/src/components/Modal/Modal.styl
@@ -48,6 +48,7 @@
 .Modal {
     @extends .Card;
 
+    themed background-color bg;
     themed color fg;
     max-width: 100%;
     max-height: 90vh;
