Changed CustomThemeEditor -> CustomBackgroundEditor, data['customThemeURL'] -> data['custom.backgroundUrl']

--- a/src/components/CustomBackgroundEditor/CustomBackgroundEditor.styl
+++ b/src/components/CustomBackgroundEditor/CustomBackgroundEditor.styl
@@ -15,4 +15,19 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-export * from "./CustomThemeEditor";
+
+.CustomBackgroundEditor {
+    display: inline-flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 100%;
+    justify-content: center;
+    
+    .customUrlSelector {
+        width: 212px;
+        height: 24px;
+        border: 1px solid lightgrey;
+        margin-top: 0px;
+        margin-bottom: 10px;
+    }
+}
