removed .custom-theme-* CSS classes, added .container-* CSS classes, changed the way how container-border is working

--- a/src/components/GobanLineSummary/GobanLineSummary.styl
+++ b/src/components/GobanLineSummary/GobanLineSummary.styl
@@ -17,10 +17,9 @@
 
 .GobanLineSummaryContainer {
     //display: table
-
+    border: 1px solid transparent;
     themed background-color container-background-color;
     themed box-shadow container-box-shadow;
-    themed border container-border;
     themed border-color container-border-color;
     
     width: auto;
