--- a/src/ogs.styl
+++ b/src/ogs.styl
@@ -105,10 +105,9 @@ light.fg                                = #202020
 light.fg-increased-contrast             = #000000
 light.mix-base                          = #999
 light.background-color                  = alpha(#fff, 15%)
-light.container-background-color         = alpha(light.bg, 80%)
-light.container-border                   = 1px solid transparent
-light.container-border-color             = lighten(light.container-background-color, 10%)
-light.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
+light.container-background-color        = alpha(light.bg, 80%)
+light.container-border-color            = darken(light.container-background-color, 10%)
+light.container-box-shadow              = 0px 2px 10px 0px alpha(#000, 16%)
 light.card-background-color             = lighten(light.container-background-color, 20%)
 light.text-color                        = light.fg
 light.text-color-active                 = darken(light.text-color, 50%)
@@ -250,7 +249,6 @@ dark.fg-increased-contrast              = #ffffff
 dark.mix-base                           = #777
 dark.background-color                   = alpha(black, 15%)
 dark.container-background-color         = alpha(dark.bg, 80%)
-dark.container-border                   = 1px solid transparent
 dark.container-border-color             = lighten(dark.container-background-color, 10%)
 dark.container-box-shadow               = 0px 2px 10px 0px alpha(#000, 16%)
 dark.card-background-color              = lighten(dark.container-background-color, 7%)
@@ -398,7 +396,6 @@ accessible.link-color                         = #539bff
 accessible.link-color-active                  = darken(accessible.link-color, 20%)
 
 accessible.container-background-color         = transparent
-accessible.container-border                   = 1px solid transparent
 accessible.container-border-color             = transparent
 accessible.container-box-shadow               = none
 
