--- a/src/views/Play/Play.styl
+++ b/src/views/Play/Play.styl
@@ -191,8 +191,9 @@
 }
 
 #play-bottom-container {
+    border: 1px solid transparent;
+
     themed background-color container-background-color;
-    themed border container-border;
     themed border-color container-border-color;
     themed box-shadow container-box-shadow;
 
