--- a/src/views/Puzzle/Puzzle.styl
+++ b/src/views/Puzzle/Puzzle.styl
@@ -117,7 +117,7 @@ puzzle-controls-width=400px
         margin-top: 1rem;
 
         .actions {
-            padding-top: 1rem;
+            padding: 0.5rem 0.5rem;
             text-align: right;
         }
 
