--- a/src/views/Group/Group.styl
+++ b/src/views/Group/Group.styl
@@ -15,23 +15,25 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-.Group {
-    .banner {
-        text-align: center;
-        img {
-            max-width: 100vw;
-            max-height: 20vh;
-        }
-
-        .fa-picture-o {
-            font-size: 15vh;
-            themed color shade3
-        }
-        .fa-picture-o:hover {
-            themed color shade2
-        }
-        
+.banner {
+    text-align: center;
+    padding: 0;
+    img {
+        max-width: 100%;
+        max-height: 20vh;
+        object-fit: cover;
     }
+
+    .fa-picture-o {
+        font-size: 15vh;
+        themed color shade3
+    }
+    .fa-picture-o:hover {
+        themed color shade2
+    }
+}
+
+.Group {
     .admins {
         margin-bottom: 1rem;
 
